--- a/frontend/src/app/views/user/user-events/event-details/event-details.component.html
+++ b/frontend/src/app/views/user/user-events/event-details/event-details.component.html
@@ -34,7 +34,7 @@
         </div>
     </form>
 
-    <button class="btn btn-primary btn-lg btn-block">Modifier Evenement</button>
+    <button class="btn btn-primary btn-lg btn-block" (click)="updateCurrentEvent(evenement._id)">Modifier Evenement</button>
 
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
