--- a/frontend/src/app/views/user/user-events/events/events.component.html
+++ b/frontend/src/app/views/user/user-events/events/events.component.html
@@ -21,8 +21,8 @@
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col" *ngFor="let event of eventList | slice:0:6; let i=index">
             <div class="col">
-                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg">
-                    <img class="card-img-top d-flex h-100 flex-column h-100 overflow-hidden p-5 pb-3 text-shadow-1 w-100" crossorigin="anonymous" src="http://localhost:3000/events/getImage/{{event.coverImagePath}}">
+                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" [style.background-image]="'url(http://localhost:3000/events/getImage/{{event.coverImagePath}})'">
+                    <img class="card-img-top d-flex h-100 flex-column h-100 overflow-hidden p-5 pb-3 text-shadow-1 w-100">
 
                     <button class="border-0 bg-dark text-white" (click)="getEventDetails(event._id)">
                       <!--  event.coverImagePath -->
@@ -60,14 +60,45 @@
             <span class="fs-4 text-light ">Chercher l'évenement de votre choix</span>
         </a>
         <div class="d-flex flex-wrap search-box ">
-            <button class="btn-search "><img class="bi me-2 " width="40 " height="32 " src="../../../../../assets/img/42-search-outline (1).gif ">
+            <button class="btn-search " (click)="serachListElement()"><img class="bi me-2 " width="40 " height="32 " src="../../../../../assets/img/42-search-outline (1).gif ">
             </button>
-            <input type="text " class="input-search " placeholder="Type to Search... ">
+            <input type="text" name="SearchKeyWord" id="SearchKeyWord" [(ngModel)]="searchKeyWord" class="input-search " placeholder="Type to Search... ">
         </div>
         <div class="d-flex flex-wrap ">
             <button class="btn-search "><img class="bi me-2 " width="40 " height="32 " src="../../../../../assets/img/45-category-outline.gif ">
           </button>
         </div>
+        <div class="container px-4 py-5" id="events-cards">
+            <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+                <div class="col" *ngFor="let event of searchedEventList | slice:0:6; let i=index">
+                    <div class="col">
+                        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" [style.background-image]="'url(http://localhost:3000/events/getImage/{{event.coverImagePath}})'">
+                            <img class="card-img-top d-flex h-100 flex-column h-100 overflow-hidden p-5 pb-3 text-shadow-1 w-100">
+
+                            <button class="border-0 bg-dark text-white" (click)="getEventDetails(event._id)">
+                        <!--  event.coverImagePath -->
+                          <h2 class=" pt-5 mt-5 mb-4 display-6 lh-1 fw-bold ">{{event.name}}</h2>
+                          <ul class="d-flex list-unstyled mt-auto ">
+                              <li class="me-auto ">
+                                  <img src="https://github.com/twbs.png " alt="Bootstrap " width="32 " height="32 " class="rounded-circle border border-white ">
+                              </li>
+                              <li class="d-flex align-items-center me-3 ">
+                                  <svg class="bi me-2 " width="1em " height="1em "><use xlink:href="#geo-fill "></use></svg>
+                                  <small>{{event.pays}}</small>
+                              </li>
+                              <li class="d-flex align-items-center ">
+                                  <svg class="bi me-2 " width="1em " height="1em "><use xlink:href="#calendar3 "></use></svg>
+                                  <small>{{event.startDate}}</small>
+                              </li>
+                          </ul>
+
+                    </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
 
