--- a/frontend/src/app/views/user/user-blogs/blogs/blogs.component.css
+++ b/frontend/src/app/views/user/user-blogs/blogs/blogs.component.css
@@ -7,7 +7,7 @@ body {
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
+  background-color: rgb(19, 19, 19) ;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
 }
