--- a/frontend/src/app/views/user/user-blogs/blogs/blogs.component.html
+++ b/frontend/src/app/views/user/user-blogs/blogs/blogs.component.html
@@ -1,8 +1,8 @@
 
-
-      <div class="py-5 text-center container">
-        <div class="row py-lg-5">
-          <div class="col-lg-8 col-md- mx-auto">
+<body >
+      <div class="py-5 text-center container" style="background-color: rgb(30, 28, 28);">
+        <div class="row py-lg-5" style="background-color: rgb(30, 28, 28);">
+          <div class="col-lg-8 col-md- mx-auto"  >
 
             <p class="lead text-muted"> Blog Quelque chose de court et de principal sur la collection ci-dessous - son contenu, le créateur, etc. Faites-le court et doux, mais pas trop court pour que les gens ne le sautent pas complètement.</p>
             <p>
@@ -69,7 +69,7 @@
         </tbody>
       </table> -->
 
-<div class="album py-5 bg-light">
+<div class="album py-5 " >
   <div class="container">
 
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -90,7 +90,7 @@
           <div class="card-body">
             <p class="card-text">{{blog.description}}</p>
             <a routerLink="/blogs/details"  style="color: rgb(54, 18, 255); font-size:18px ;">Lire suite</a>
-            
+
             <div><p>{{blog.text}}</p></div>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
@@ -119,3 +119,7 @@
 
     </div>
   </div>
+  </div>
+  </div>
+  
+  </body>
