--- a/frontend/src/app/views/user/user-blogs/blog-add/blog-add.component.css
+++ b/frontend/src/app/views/user/user-blogs/blog-add/blog-add.component.css
@@ -4,18 +4,19 @@
   margin: 20px;
   padding: 20px;
   border: 10px solid rgba(32, 30, 30, 0.798);
-  background: #fbffffac;
+  background: rgba(241, 241, 242, 0.891);
 
 }
 
 .form-group{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: bolder;
-  border-left-color:rgba(58, 239, 179, 0.871)
+  border-left-color:rgb(243, 255, 251)
 
 }
 h3{
   color: rgb(50, 106, 249);
+  font-weight: bold;
 }
 form-select form-select-sm {
   background: white;
@@ -35,12 +36,15 @@ form-select form-select-sm {
   border: 10px solid black;
 }
 body {
-  background: #b5c6d4;
+  background: #fcfeff;
   font-family: Montserrat, "sans-serif";
   display: contents;
   justify-content: center;
   color: #111111;
   width: 100%;
 
+  }
+  .btn-primary{
+background-color: #38b074;
   }
 
