--- a/frontend/src/app/views/user/user-events/events/events.component.html
+++ b/frontend/src/app/views/user/user-events/events/events.component.html
@@ -20,28 +20,28 @@
 
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col" *ngFor="let event of eventList | slice:0:6; let i=index">
-            <div class="col">
-                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" [style.background-image]="'url(http://localhost:3000/events/getImage/{{event.coverImagePath}})'">
-                    <img class="card-img-top d-flex h-100 flex-column h-100 overflow-hidden p-5 pb-3 text-shadow-1 w-100">
+            <div class="col bg-blue" [style.backgroundImage]="'url('+ 'http://localhost:3000/events/getImage/{{event.coverImagePath}}' +')'">
+                <div class="card card-cover h-100 overflow-hidden text-white bg-transparent rounded-5 shadow-lg">
+                    <button class="border-0 bg-transparent text-white" (click)="getEventDetails(event._id)">
 
-                    <button class="border-0 bg-dark text-white" (click)="getEventDetails(event._id)">
-                      <!--  event.coverImagePath -->
-                        <h2 class=" pt-5 mt-5 mb-4 display-6 lh-1 fw-bold ">{{event.name}}</h2>
-                        <ul class="d-flex list-unstyled mt-auto ">
-                            <li class="me-auto ">
-                                <img src="https://github.com/twbs.png " alt="Bootstrap " width="32 " height="32 " class="rounded-circle border border-white ">
-                            </li>
-                            <li class="d-flex align-items-center me-3 ">
-                                <svg class="bi me-2 " width="1em " height="1em "><use xlink:href="#geo-fill "></use></svg>
-                                <small>{{event.pays}}</small>
-                            </li>
-                            <li class="d-flex align-items-center ">
-                                <svg class="bi me-2 " width="1em " height="1em "><use xlink:href="#calendar3 "></use></svg>
-                                <small>{{event.startDate}}</small>
-                            </li>
-                        </ul>
+                    <img class="card-img-top cover d-flex h-100 flex-column h-100 overflow-hidden p-5 pb-3 text-shadow-1 w-100" crossorigin="anonymous" src="http://localhost:3000/events/getImage/{{event.coverImagePath}}">
+                    </button>
+                    <!--  event.coverImagePath -->
+                    <h2 class=" pt-5 mt-5 mb-4 display-6 lh-1 fw-bold ">{{event.name}}</h2>
+                    <ul class="d-flex list-unstyled mt-auto ">
+                        <li class="me-auto ">
+                            <img src="https://github.com/twbs.png " alt="Bootstrap " width="32 " height="32 " class="rounded-circle border border-white ">
+                        </li>
+                        <li class="d-flex align-items-center me-3 ">
+                            <svg class="bi me-2 " width="1em " height="1em "><use xlink:href="#geo-fill "></use></svg>
+                            <small>{{event.pays}}</small>
+                        </li>
+                        <li class="d-flex align-items-center ">
+                            <svg class="bi me-2 " width="1em " height="1em "><use xlink:href="#calendar3 "></use></svg>
+                            <small>{{event.startDate}}</small>
+                        </li>
+                    </ul>
 
-                  </button>
                 </div>
             </div>
         </div>
