--- a/frontend/src/app/views/user/user-events/events/events.component.html
+++ b/frontend/src/app/views/user/user-events/events/events.component.html
@@ -15,42 +15,41 @@
 </div>
 
 
-<div class="container px-4 py-5" id="events-cards">
-    <h2 class="pb-2 border-bottom text-dark">Derniers évenements</h2>
+
+<div class="container px-4 py-5" id="custom-cards">
+    <h2 class="pb-2 border-bottom">Nos évenements</h2>
 
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col" *ngFor="let event of eventList | slice:0:6; let i=index">
-            <div class="col bg-blue" [style.backgroundImage]="'url('+ 'http://localhost:3000/events/getImage/{{event.coverImagePath}}' +')'">
-                <div class="card card-cover h-100 overflow-hidden text-white bg-transparent rounded-5 shadow-lg">
-                    <button class="border-0 bg-transparent text-white" (click)="getEventDetails(event._id)">
-
-                    <img class="card-img-top cover d-flex h-100 flex-column h-100 overflow-hidden p-5 pb-3 text-shadow-1 w-100" crossorigin="anonymous" src="http://localhost:3000/events/getImage/{{event.coverImagePath}}">
-                    </button>
-                    <!--  event.coverImagePath -->
-                    <h2 class=" pt-5 mt-5 mb-4 display-6 lh-1 fw-bold ">{{event.name}}</h2>
-                    <ul class="d-flex list-unstyled mt-auto ">
-                        <li class="me-auto ">
-                            <img src="https://github.com/twbs.png " alt="Bootstrap " width="32 " height="32 " class="rounded-circle border border-white ">
-                        </li>
-                        <li class="d-flex align-items-center me-3 ">
-                            <svg class="bi me-2 " width="1em " height="1em "><use xlink:href="#geo-fill "></use></svg>
-                            <small>{{event.pays}}</small>
-                        </li>
-                        <li class="d-flex align-items-center ">
-                            <svg class="bi me-2 " width="1em " height="1em "><use xlink:href="#calendar3 "></use></svg>
-                            <small>{{event.startDate}}</small>
-                        </li>
-                    </ul>
-
+            <a (click)="getEventDetails(event._id)">
+                <div class="card h-100 overflow-hidden text-white rounded-5 shadow-lg cardElement">
+                    <img src="{{event.coverImagePath}}" class="card-img  cardImage" onerror="this.src='../../../../../assets/img/Logo_blanc.png ';" alt="...">
+                    <div class=" card-img-overlay d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1 ">
+                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">{{event.name}}</h2>
+                        <ul class="d-flex list-unstyled mt-auto">
+                            <li class="me-auto">
+                                <img src="./../../../../../assets/img/{{event.category}}.png" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-0">
+                            </li>
+                            <li class="d-flex align-items-center me-3">
+                                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
+                                <small>{{event.location}}</small>
+                            </li>
+                            <li class="d-flex align-items-center">
+                                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"></use></svg>
+                                <small>{{event.startDate | date }}</small>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
+
     </div>
 </div>
 
 
-
 <!-- *********** Bloc de recherche ***********  -->
+
 
 
 <div class="py-3 mb-4 border-bottom search-bloc ">
@@ -68,59 +67,51 @@
             <button class="btn-search "><img class="bi me-2 " width="40 " height="32 " src="../../../../../assets/img/45-category-outline.gif ">
           </button>
         </div>
-        <div class="container px-4 py-5" id="events-cards">
-            <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-                <div class="col" *ngFor="let event of searchedEventList | slice:0:6; let i=index">
-                    <div class="col">
-                        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" [style.background-image]="'url(http://localhost:3000/events/getImage/{{event.coverImagePath}})'">
-                            <img class="card-img-top d-flex h-100 flex-column h-100 overflow-hidden p-5 pb-3 text-shadow-1 w-100">
+    </div>
 
-                            <button class="border-0 bg-dark text-white" (click)="getEventDetails(event._id)">
-                        <!--  event.coverImagePath -->
-                          <h2 class=" pt-5 mt-5 mb-4 display-6 lh-1 fw-bold ">{{event.name}}</h2>
-                          <ul class="d-flex list-unstyled mt-auto ">
-                              <li class="me-auto ">
-                                  <img src="https://github.com/twbs.png " alt="Bootstrap " width="32 " height="32 " class="rounded-circle border border-white ">
-                              </li>
-                              <li class="d-flex align-items-center me-3 ">
-                                  <svg class="bi me-2 " width="1em " height="1em "><use xlink:href="#geo-fill "></use></svg>
-                                  <small>{{event.pays}}</small>
-                              </li>
-                              <li class="d-flex align-items-center ">
-                                  <svg class="bi me-2 " width="1em " height="1em "><use xlink:href="#calendar3 "></use></svg>
-                                  <small>{{event.startDate}}</small>
-                              </li>
-                          </ul>
+    <!-- Résultats -->
 
-                    </button>
+    <div class="container px-1 py-1 " id="custom-cards">
+        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch ">
+            <div class="col" *ngFor="let event of searchedEventList | slice:0:6; let i=index" class="mt-2">
+                <a (click)="getEventDetails(event._id)">
+                    <div class="card h-100 overflow-hidden text-white rounded-5 shadow-lg cardElement">
+                        <img src="http://localhost:3000/events/getImage/{{event.coverImagePath}}" class="card-img  cardImage" onerror="this.src='../../../../../assets/img/Logo_blanc.png ';" alt="...">
+                        <div class=" card-img-overlay d-flex flex-column h-100 p-5 pb-3  text-white text-shadow-1 ">
+                            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">{{event.name}}</h2>
+                            <ul class="d-flex list-unstyled mt-auto">
+                                <li class="me-auto">
+                                    <img src="./../../../../../assets/img/{{event.category}}.png" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-0">
+                                </li>
+                                <li class="d-flex align-items-center me-3">
+                                    <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
+                                    <small>{{event.location}}</small>
+                                </li>
+                                <li class="d-flex align-items-center">
+                                    <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"></use></svg>
+                                    <small>{{event.startDate | date }}</small>
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
-        </div>
 
-    </div>
-</div>
-
-
-
-<div class="container px-4 py-5 " id="events-cards ">
-    <h2 class="pb-2 border-bottom text-dark ">Contacter nos guides</h2>
-
-    <div class="row ">
-        <div class="col-lg-4 ">
-            <svg class="bd-placeholder-img rounded-circle " width="140 " height="140 " xmlns="http://www.w3.org/2000/svg " role="img " aria-label="Placeholder: 140x140 " preserveAspectRatio="xMidYMid slice " focusable="false
-                        "><title>Placeholder</title><rect width="100% " height="100% " fill="#777 "></rect><text x="50% " y="50% " fill="#777 " dy=".3em ">140x140</text></svg>
-
-            <h2>Heading</h2>
-            <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-            <p><a class="btn btn-secondary " href="# ">Consuler Profils</a></p>
         </div>
     </div>
 
-
-    <hr class="featurette-divider ">
-
-    <!-- /END THE FEATURETTES -->
-
 </div>
+
+
+<div class="container marketing">
+
+    <!-- Three columns of text below the carousel -->
+    <div class="row  ">
+        <div class="align-self-center">
+            <svg class="bd-placeholder-img rounded-circle lign-self-center" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+
+            <h2 class="lign-self-center">Heading</h2>
+            <p class="lign-self-center">Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+            <p><a class="btn btn-secondary lign-self-center" href="#">View details »</a></p>
+        </div>
+    </div>
