--- a/frontend/src/app/views/admin/admin-events/events/events.component.html
+++ b/frontend/src/app/views/admin/admin-events/events/events.component.html
@@ -1,3 +1,3 @@
 <section class="home-section">
-    <app-events-display></app-events-display>
+    <app-dashboard-event></app-dashboard-event>
 </section>
