--- a/frontend/src/app/views/user/user-events/events/events.component.css
+++ b/frontend/src/app/views/user/user-events/events/events.component.css
@@ -1,3 +1,4 @@
+@import url('https://getbootstrap.com//docs/5.1/dist/css/bootstrap.min.css');
 #eventHeader,
 .search-bloc {
     background-image: linear-gradient(to right, #0B2518 0%, 8.862433582544327%, #0B2518 17.724867165088654%, 49.669311195611954%, #0D0D0D 81.61375522613525%);
@@ -86,4 +87,13 @@
     background-color: transparent;
     border-bottom: 1px solid rgba(255, 255, 255, .5);
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+
+.cardImage {
+    height: 300px;
+    width: 500px;
+}
+
+.cardElement {
+    background-color: #0D0D0D;
 }
