--- a/frontend/src/app/views/user/home/home/home.component.html
+++ b/frontend/src/app/views/user/home/home/home.component.html
@@ -20,18 +20,20 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul>
                 <a class="img-hover-zoom"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2"
-                                                data-toggle="tooltip" data-placement="top"
-                                                title="Chasse dans les forets"
-                                                src="../../../../../assets/img/forest-Icon-W.png"/></a>
-                <a class="img-hover-zoom" href="#"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2"
-                                 data-toggle="tooltip" data-placement="top" title="pêche"
-                                 src="../../../../../assets/img/sea-icon-W.png"/> </a>
+                                               data-toggle="tooltip" data-placement="top"
+                                               title="Chasse dans les forets"
+                                               src="../../../../../assets/img/forest-Icon-W.png"/></a>
+                <a class="img-hover-zoom" href="#"><img width="30" height="50" alt=""
+                                                        class="d-inline-block align-middle mr-2"
+                                                        data-toggle="tooltip" data-placement="top" title="pêche"
+                                                        src="../../../../../assets/img/sea-icon-W.png"/> </a>
                 <a class="img-hover-zoom"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2"
-                                 data-toggle="tooltip" data-placement="top" title="Chasse dans les deserts"
-                                 src="../../../../../assets/img/desert-Icon-W.png"/></a>
+                                               data-toggle="tooltip" data-placement="top"
+                                               title="Chasse dans les deserts"
+                                               src="../../../../../assets/img/desert-Icon-W.png"/></a>
                 <a class="img-hover-zoom"><img width="30" height="50" alt="" class="d-inline-block align-middle mr-2"
-                                 data-toggle="tooltip" data-placement="top" title="Chasse des oiseaux"
-                                 src="../../../../../assets/img/sky-Icon-W.png"/></a>
+                                               data-toggle="tooltip" data-placement="top" title="Chasse des oiseaux"
+                                               src="../../../../../assets/img/sky-Icon-W.png"/></a>
               </ul>
             </div>
           </div>
@@ -43,7 +45,7 @@
 
 
 <!--news section-->
-<section class="py-7 bg-dark section-angle top-left bottom-left" id="blog">
+<section class="py-7 bg-dark product-news top-left bottom-left" id="blog">
   <div class="container">
     <div class="row">
       <div class="col-md-6 mx-auto text-center">
@@ -98,60 +100,63 @@
       </div>
     </div>
   </div>
+  <div class="mt-5">
+  <br> <br> <br>
+  </div>
+  <!--footer-->
+  <footer class="py-6 bg-transparent">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-5 mr-auto">
+          <h5>About Knight</h5>
+          <p class="text-muted">Magnis modipsae que voloratati andigen daepeditem quiate conecus aut labore.
+            Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam explabo.</p>
+          <ul class="list-inline social social-sm">
+            <li class="list-inline-item">
+              <a href=""><i class="fa fa-facebook"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href=""><i class="fa fa-twitter"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href=""><i class="fa fa-google-plus"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href=""><i class="fa fa-dribbble"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-sm-2">
+          <h5>Legal</h5>
+          <ul class="list-unstyled">
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Refund policy</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-2">
+          <h5>Partner</h5>
+          <ul class="list-unstyled">
+            <li><a href="#">Refer a friend</a></li>
+            <li><a href="#">Affiliates</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-2">
+          <h5>Help</h5>
+          <ul class="list-unstyled">
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Log in</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-12 text-muted text-center small-xl">
+          &copy; 2022 NeN - All Rights Reserved
+        </div>
+      </div>
+    </div>
+  </footer>
 </section>
 
-<!--footer-->
-<footer class="py-6 bg-dark">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-5 mr-auto">
-        <h5>About Knight</h5>
-        <p class="text-muted">Magnis modipsae que voloratati andigen daepeditem quiate conecus aut labore.
-          Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam explabo.</p>
-        <ul class="list-inline social social-sm">
-          <li class="list-inline-item">
-            <a href=""><i class="fa fa-facebook"></i></a>
-          </li>
-          <li class="list-inline-item">
-            <a href=""><i class="fa fa-twitter"></i></a>
-          </li>
-          <li class="list-inline-item">
-            <a href=""><i class="fa fa-google-plus"></i></a>
-          </li>
-          <li class="list-inline-item">
-            <a href=""><i class="fa fa-dribbble"></i></a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-2">
-        <h5>Legal</h5>
-        <ul class="list-unstyled">
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Terms</a></li>
-          <li><a href="#">Refund policy</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-2">
-        <h5>Partner</h5>
-        <ul class="list-unstyled">
-          <li><a href="#">Refer a friend</a></li>
-          <li><a href="#">Affiliates</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-2">
-        <h5>Help</h5>
-        <ul class="list-unstyled">
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Log in</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="row mt-5">
-      <div class="col-12 text-muted text-center small-xl">
-        &copy; 2022 NeN - All Rights Reserved
-      </div>
-    </div>
-  </div>
-</footer>
 
 
