--- a/frontend/src/app/views/user/user-blogs/blog-add/blog-add.component.html
+++ b/frontend/src/app/views/user/user-blogs/blog-add/blog-add.component.html
@@ -1,8 +1,8 @@
-<div style="background-color: rgb(17, 17, 17);">
+<div class="back">
   <br><br><br><br><br><br><br><br>
   </div>
 <header >
-<section class="py-7 py-md-0 bg-login" id="ajout" style="background-color: rgb(17, 17, 17);" >
+<section class="py-7 py-md-0 bg-login" id="ajout"  >
   <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center align-baseline">
     <div class="row vh-md-100">
 
@@ -33,7 +33,7 @@
                      [(ngModel)]="blog.description">
                   </div>
                   <!--  <label for="formFile" class="form-label">Ajouter un fichier</label>
-                    <input class="form-control" type="file" id="formFile"  [(ngModel)]="blog.img" required>
+                    <input class="form-control" type="file" id="formFile"  [(ngModel)]="blog.img" >
                   </div>-->
                   <div class="form-group">
                     <label for="text" class="form-label">Le contenu du blog</label>
