dashboard admin bug fix, camp search api integrated with the front

--- a/frontend/src/app/views/admin/admin-maps/camp/camp.component.html
+++ b/frontend/src/app/views/admin/admin-maps/camp/camp.component.html
@@ -3,7 +3,10 @@
 
     <div class="album py-5 bg-light">
         <div class="container">
-
+          <div class="d-flex flex-wrap search-box ">
+            <input class="form-control"  type="text"placeholder="Type to Search..."  [(ngModel)]="searchKeyWord">
+            <button class="btn btn-success" (click)="serachListElement()">Search</button>
+          </div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                 <div class="col" *ngFor="let spot of campList">
                     <div class="card shadow-sm">
