--- a/frontend/src/app/views/user/user-maps/hunt-add/hunt.component.css
+++ b/frontend/src/app/views/user/user-maps/hunt-add/hunt.component.css
@@ -126,7 +126,32 @@ agm-map {
 
 
 
+::ng-deep .mat-form-field {
+  background-color: transparent;
+  border-color: white;
+}
 
+::ng-deep .mat-form-field-label {
+  /*change color of label*/
+  color: white !important;
+}
+
+::ng-deep label.mat-input-placeholder {
+  /*change color of label*/
+  color: white !important;
+}
+
+
+
+::ng-deep.mat-form-field-underline {
+  /*change color of underline*/
+  background-color: white !important;
+}
+
+::ng-deep.mat-form-field-ripple {
+  /*change color of underline when focused*/
+  background-color: green !important;
+}
 
 
 
