--- a/frontend/src/app/views/user/user-maps/hunt-add/hunt.component.html
+++ b/frontend/src/app/views/user/user-maps/hunt-add/hunt.component.html
@@ -1,4 +1,3 @@
-
 <section class="contact-us">
   <div class="container">
     <div class="row">
@@ -13,23 +12,35 @@
         <form action="/" class="mb-4 mb-lg-0">
           <div class="form-row">
             <div class="col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" [(ngModel)]="huntSpot.name"  placeholder="Spot Name" />
+              <input type="text" name="name" class="form-control" id="name" [(ngModel)]="huntSpot.name"
+                     placeholder="Spot Name"/>
             </div>
-            <div class="col-md-6 form-group">
-              <input type="text" class="form-control" name="hunt_type" id="hunt_type" [(ngModel)]="huntSpot.hunt_type"  placeholder="Hunt type" />
+            <div class="form-group">
+              <mat-form-field class="form-control">
+                <mat-label class="align-top">Camp Category</mat-label>
+                <mat-select (selectionChange)="huntType($event)">
+                  <mat-option *ngFor="let type of hunt_types" [value]="type.value">
+                    {{type.viewValue}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
             </div>
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="address" [(ngModel)]="huntSpot.address"  id="address" placeholder="Address" />
+            <input type="text" class="form-control" name="address" [(ngModel)]="huntSpot.address" id="address"
+                   placeholder="Address"/>
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Animal name" name="rate" [(ngModel)]="huntSpot.animal_name" required/>
+            <input type="text" class="form-control" placeholder="Animal name" name="rate"
+                   [(ngModel)]="huntSpot.animal_name" required/>
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Latitude" [(ngModel)]="camp_lat" name="camp_latitude" disabled/>
+            <input type="text" class="form-control" placeholder="Latitude" [(ngModel)]="camp_lat" name="camp_latitude"
+                   disabled/>
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Longitude" [(ngModel)]="camp_lng" name="camp_longitude" disabled/>
+            <input type="text" class="form-control" placeholder="Longitude" [(ngModel)]="camp_lng"
+                   name="camp_longitude" disabled/>
           </div>
           <button (click)="save()" type="button" class="btn btn-info">Add</button>
           <button (click)="home()" type="button" class="btn btn-danger">Return</button>
