--- a/frontend/src/app/views/user/user-events/events/events.component.html
+++ b/frontend/src/app/views/user/user-events/events/events.component.html
@@ -115,3 +115,4 @@
             <p><a class="btn btn-secondary lign-self-center" href="#">View details »</a></p>
         </div>
     </div>
+</div>
