--- a/frontend/src/app/views/user/user-events/event-details/event-details.component.css
+++ b/frontend/src/app/views/user/user-events/event-details/event-details.component.css
@@ -1,3 +1,14 @@
 .headercmp {
     background-image: linear-gradient(to right, #0B2518 0%, 8.862433582544327%, #0B2518 17.724867165088654%, 49.669311195611954%, #0D0D0D 81.61375522613525%);
 }
+
+.cardImage {
+    height: 1080px;
+}
+
+.card-img-overlay {
+    background-color: rgba(0, 0, 0, 50%);
+    height: 100%;
+    width: 100%;
+    padding: 0;
+}
