--- a/frontend/src/app/views/user/user-products/products/products.component.html
+++ b/frontend/src/app/views/user/user-products/products/products.component.html
@@ -1,5 +1,5 @@
-<section class="products h-full">
-  <div class="h-full">
+<section class="eya h-full">
+  <div class="h-full eya">
     <div id="test" class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
       <h2 class="sr-only">Products</h2>
       <nav class="navbar navbar-expand  justify-content-center pb-32 pt-20  ">
