--- a/frontend/src/app/layouts/user-layout/user-layout.component.html
+++ b/frontend/src/app/layouts/user-layout/user-layout.component.html
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link page-scroll" href="#blogs" routerLink="/blogs/home">Blogs</a>
+            <a class="nav-link page-scroll" href="#blogs" routerLink="/blogs">Blogs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link page-scroll" href="#events" routerLink="/events">Events</a>
