--- a/frontend/src/app/views/user/user-blogs/blogs/blogs.component.html
+++ b/frontend/src/app/views/user/user-blogs/blogs/blogs.component.html
@@ -23,21 +23,7 @@
 </div>
 
 <body >
-      <div class="py-5 text-center container" id="back">
-        <div class="row py-lg-5" >
-          <div class="col-lg-8 col-md- mx-auto"  >
 
-            <p class="lead text-muted"> Blog Quelque chose de court et de principal sur la collection ci-dessous - son contenu, le créateur, etc. Faites-le court et doux, mais pas trop court pour que les gens ne le sautent pas complètement.</p>
-            <p>
-              <a routerLink="/blogs/add" class="btn btn-primary my-2">Ajouter Blog</a>
-
-              <a routerLink="/blogs/home" class="btn btn-secondary my-2">Secondary action</a>
-
-
-            </p>
-          </div>
-        </div>
-        </div>
 
 
 <!--
@@ -112,18 +98,20 @@
           </div>
           <div class="card-body">
             <p class="card-text">{{blog.description}}</p>
-            <a routerLink="/blogs/details"  style="color: rgb(54, 18, 255); font-size:18px ;">Lire suite</a>
+
 
             <div><p>{{blog.text}}</p></div>
             <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
 
-                <button type="button" class="btn btn-sm btn-outline-success" (click)="update(blog._id)">Modifier</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary" (click)="delete(blog._id)">Supprimer</button>
-              </div>
               <div>
-              <small class="text-muted">{{myDate| date}}</small>
-             <div> <small class="text-muted">{{myDate| date:'shortTime'}}</small>
+                <button class="border-0 bg-dark text-white" (click)="getBlogDetails(blog._id)">Lire la suite</button>
+               </div>
+
+             <!-- <a routerLink="/blogs/details"  style="color: rgb(54, 18, 255); font-size:18px ;">Lire suite</a>-->
+
+              <div> <p>publié le : <small class="text-muted">{{blog.createdAt | date}}</small> At : <small class="text-muted">{{blog.createdAt | date:'shortTime'}}</small></p>
+
+             <div>
             </div>
           </div>
 
@@ -146,3 +134,53 @@
   </div>
 
   </body>
+
+  <footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Form -->
+      <section class="">
+        <form action="">
+          <!--Grid row-->
+          <div class="row d-flex justify-content-center" style="margin-right:3px ;">
+            <!--Grid column-->
+            <div class="col-auto">
+              <p class="pt-2" style="margin-right:8px ">
+                <strong>Inscrivez-vous à notre newsletter</strong>
+              </p>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-md-5 col-12">
+              <!-- Email input -->
+              <div class="form-outline form-white mb-4">
+                <input type="email" id="form5Example29" class="form-control" placeholder="Adresse email" />
+                <label class="form-label" for="form5Example29"></label>
+              </div>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-auto">
+              <!-- Submit button -->
+              <button type="submit" class="btn btn-outline-light mb-4">
+                S'abonner
+              </button>
+            </div>
+            <!--Grid column-->
+          </div>
+          <!--Grid row-->
+        </form>
+      </section>
+      <!-- Section: Form -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(18, 17, 17, 0.882);">
+      © 2022 Copyright:
+      <a class="text-white" href="">NEN TEAM</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
